# WhiteBoard_Detection_Project

./: .gitignore  GitHub_Test.py  README.md  Readme.md  YoloV8Trainer.py  YoloV8TrainerCUDA.py  conf.yaml  main.py  pyproject.toml  yolov8m.pt
Labels/: train.cache  val.cache
Labels/Train/: Image (1602).txt  Image (1604).txt  Image (1605).txt  Image (1607).txt  Image (1608).txt  Image (1609).txt  Image (1610).txt  Image (1611).txt  Image (1612).txt  Image (1613).txt  Image (1614).txt  Image (1615).txt  Image (1616).txt  Image (1617).txt  Image (1620).txt  Image (1622).txt  Image (1623).txt  Image (1628).txt  Image (1629).txt  Image (1630).txt  Image (1631).txt  Image (1632).txt  Image (1636).txt  Image (1637).txt  Image (1638).txt  Image (1639).txt  Image (1640).txt  Image (1643).txt  Image (1646).txt  Image (1648).txt  Image (1649).txt  Image (1650).txt  Image (1652).txt  Image (1654).txt  Image (1655).txt  Image (1656).txt  Image (1657).txt  Image (1658).txt  Image (1661).txt  Image (1662).txt  (+650 more)
Labels/Val/: Image (1608).txt  Image (1610).txt  Image (1611).txt  Image (1612).txt  Image (1613).txt  Image (1615).txt  Image (1618).txt  Image (1619).txt  Image (1620).txt  Image (1621).txt  Image (1622).txt  Image (1623).txt  Image (1624).txt  Image (1625).txt  Image (1626).txt  Image (1627).txt  Image (1629).txt  Image (1630).txt  Image (1637).txt  Image (1639).txt  Image (1641).txt  Image (1643).txt  Image (1644).txt  Image (1645).txt  Image (1652).txt  Image (1653).txt  Image (1654).txt  Image (1664).txt  Image (1666).txt  Image (1667).txt  Image (1669).txt  Image (1671).txt  Image (1672).txt  Image (1677).txt  Image (1691).txt  Image (1694).txt  Image (1695).txt  Image (1696).txt  Image (1698).txt  Image (1699).txt  (+139 more)
Runs/Detect/train/: results.csv
Runs/Detect/train2/: results.csv
Runs/Detect/train3/: args.yaml
data/: .gitignore
data/Labels/: train.cache  val.cache
data/Labels/Train/: 1-100-_jpg.rf.ab45bef8d0283d1f1236cb5745864599.txt  1-100-_jpg.rf.d183686af04f500a8efcdafd314c1aa0.txt  1-100-_jpg.rf.f949f0cf06c35f5128470e59d41d1f42.txt  1-101-_jpg.rf.2d4651157d3f2f3514266badf5ddd6d0.txt  1-101-_jpg.rf.53c73edd5e7dc78f989b743c218e45a3.txt  1-101-_jpg.rf.67dc866aba5a60192d03ab7668cebf13.txt  1-104-_jpg.rf.76e15b0d56745f8f3dfaa58a1d5622a1.txt  1-104-_jpg.rf.832f25147c086989ea443812aac3775d.txt  1-104-_jpg.rf.aab0abf51e97ceb2cd488e692253b51d.txt  1-106-_jpg.rf.21cbae4777e3f356e0788ae226f8b480.txt  1-106-_jpg.rf.b1e665db4f0887bbd9eeb1ce03215af0.txt  1-106-_jpg.rf.f55ee769c302283fff3e49d17ceef9b1.txt  1-107-_jpg.rf.62926dfa038c60c273f81f80bc0a626e.txt  1-107-_jpg.rf.c8499df397512b2fe4cd09cbcb73cf32.txt  1-107-_jpg.rf.d68e8cada74829c961d3f833e8dae86e.txt  1-108-_jpg.rf.460f6bbeaf6cd8e8a17467d46c5190b0.txt  1-108-_jpg.rf.6cc45d1f0e1734ddcc368b20c8bd32d3.txt  1-108-_jpg.rf.6e2d0026f21a020b0947f56947f33e07.txt  1-109-_jpg.rf.17bb8c6c1e20397c5004b6bc6d552cd7.txt  1-109-_jpg.rf.198ba8dc1daada59ee9a3c9f54d90fd2.txt  1-109-_jpg.rf.6c028cd35f1c1cfa8f9a3145246365f9.txt  1-113-_jpg.rf.151a6c7eff4734cb408cdd33ef5e2458.txt  1-113-_jpg.rf.18489199763f5c10fe231a373ea60833.txt  1-113-_jpg.rf.242a3b38154fcd8ffccb82fe55d94e0d.txt  1-114-_jpg.rf.11d04a586b84343d4ae55afac86d5344.txt  1-114-_jpg.rf.580335e92ca1d4205c909ae9b02689dc.txt  1-114-_jpg.rf.af3db889353bcc8765d0d9eb7b7633d9.txt  1-133-_jpg.rf.102813ed6d110628f1ba0e1eea8c8e6f.txt  1-133-_jpg.rf.4148fb6a28615fda40805c46b308d24d.txt  1-133-_jpg.rf.836836b9c67133df7ac8dbe8dbf1f34d.txt  1-134-_jpg.rf.1773fcab90cabcb5ff57f4e196101bf7.txt  1-134-_jpg.rf.3563fc2c6069e3e398e544c5c2211cc7.txt  1-134-_jpg.rf.b647bf32a642e5156ce1b3359760003d.txt  1-137-_jpg.rf.78be9a9d22d45a27e572e0cccb8de74d.txt  1-137-_jpg.rf.7e537c70a16415e4f27288bcf9e1fece.txt  1-137-_jpg.rf.ab0e105aaa6050644e33a1c7d422f283.txt  1-145-_jpg.rf.4aee14814321bedf18d8547746efefc2.txt  1-145-_jpg.rf.7912b66927ababec1fe03930bfbb4e35.txt  1-145-_jpg.rf.c5fb874a522ec313f4abdb5075805c1a.txt  1-213-_jpg.rf.01cf10a5b1276b2d221ea7d97f960589.txt  (+3024 more)
data/Labels/Val/: 1-102-_jpg.rf.6d54448f210ebd9a5fa7741d9e38d978.txt  1-103-_jpg.rf.4c14e865ec043ce812e5731cb0d98ac4.txt  1-105-_jpg.rf.99c07d02c904f45850f365d01032fa9b.txt  1-111-_jpg.rf.57550fcdb9562d1b8812f3b7e34b5158.txt  (+556 more)
doc/: Model_Performance_Documentation.md
notebooks/: Data collection and processing.ipynb
results/detected_images/: Read me.txt
results/labeling_images/: Read me.txt
src/data/: YoloV8TrainerCUDA.py  YoloV8TrainerCUDA_V2.py  Yolov8Classification.py
src/detection/: detection_module.py
src/gui/: app.py
src/utils/: Automatic Labeling Code.py  CudaTest.py  Find WhiteBoard images.py  Labels and Images matching.py  Labels-Converter.py  YOLOModelTest_V3.py  Yolo Image Test.py  YoloClassificationModelTest.py  YoloClassificationTest.py
(+25 files in other folders)
