[project]
name = "whiteboard-detection-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "certifi",
    "charset-normalizer",
    "click",
    "cmake",
    "colorama",
    "contourpy",
    "cycler",
    "filelock",
    "fonttools",
    "fsspec",
    "idna",
    "jinja2",
    "kiwisolver",
    "markupsafe",
    "matplotlib",
    "mpmath",
    "networkx",
    "numpy",
    "opencv-python",
    "packaging",
    "pillow",
    "polars",
    "psutil",
    "py-cpuinfo",
    "pyparsing",
    "python-dateutil",
    "pyyaml",
    "requests",
    "scipy",
    "setuptools",
    "six",
    "sympy",
    "torch",
    "torchvision",
    "typing-extensions",
    "ultralytics",
    "ultralytics-thop",
    "urllib3",
    "pyqt6"
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
# PyTorch with CUDA 12.9 support - use PyTorch's CUDA index
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
